# rgbds.nvim

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  go.mod  grammar.js  lazy.lua  tree-sitter.json
doc/: rgbasm.txt  rgbds.nvim.txt
docs/: rgbasm.5
tree-sitter-rgbasm/: CLAUDE.md  Makefile  Package.swift  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-rgbasm/bindings/go/: binding_test.go
tree-sitter-rgbasm/bindings/node/: index.js
tree-sitter-rgbasm/bindings/rust/: build.rs
tree-sitter-rgbasm/bindings/swift/TreeSitterRgbasmTests/: TreeSitterRgbasmTests.swift
tree-sitter-rgbasm/identifier/: CMakeLists.txt  Makefile  grammar.js  package.json  tree-sitter.json
tree-sitter-rgbasm/identifier/bindings/c/: tree-sitter-rgbasm-identifier.pc.in
tree-sitter-rgbasm/identifier/queries/: highlights.scm
tree-sitter-rgbasm/identifier/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-rgbasm/identifier/test/corpus/: format_string.txt  identifier.txt  interpolation.txt
tree-sitter-rgbasm/queries/: folds.scm  highlights.scm  injections.scm
tree-sitter-rgbasm/src/: grammar.json  identifier.c  node-types.json  parser.c  scanner.c
tree-sitter-rgbasm/test/corpus/: blocks.txt  comments.txt  directives.txt  expressions.txt  identifier_edge_cases.txt  instructions.txt  interpolation.txt  labels.txt  line_continuation.txt  literals.txt  macros.txt  quiet_token.txt  rgbds.txt  strings.txt
tree-sitter-rgbasm/test/highlight/: blocks.rgbasm  expressions.rgbasm  instructions.rgbasm  labels.rgbasm
(+32 files in other folders)
